--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    </head>
    <body>
       <h1><center>GANGINENI NAGALAKSHMI</center></h1>
-      <img src="image.jpg"alt="image">
-      alt="image"height="300"width="350"> 
+      <img src="image.jpg"alt="image"
+      alt="image"height="200px"width="200px"> 
       <h2>SUMMARY</h2>
       <p> "To obtain an entry-level position in a reputable organization where I can apply my skills and knowledge in computer science to contribute to the growth and success of the company.
 "</p>
